/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package api.common.driver;

import "api/common/r.proto";
import "api/common/entity.proto";
import "driver_entity.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.common.driver";
option java_outer_classname = "DriverProto";
option objc_class_prefix = "Driver";
option java_multiple_files = true;

/*
Api
服务接口，定义了驱动相关的RPC调用
*/
service DriverApi {
  // 驱动注册，用于驱动服务向平台注册自身信息
  rpc DriverRegister (GrpcDriverRegisterDTO) returns (GrpcRDriverRegisterDTO);
}

// 驱动注册响应结构体
message GrpcRDriverRegisterDTO {
  /*
  R
  通用返回结果，包含状态码、消息等
  */
  GrpcR result = 1;

  /*
  驱动
  驱动基本信息
  */
  GrpcDriverDTO driver = 2;

  /*
  设备ID集合
  该驱动管理的设备ID列表
  */
  repeated int64 device_ids = 3;

  /*
  驱动属性集合
  驱动支持的属性配置列表
  */
  repeated GrpcDriverAttributeDTO driver_attributes = 4;

  /*
  位号属性集合
  驱动支持的点位属性配置列表
  */
  repeated GrpcPointAttributeDTO point_attributes = 5;

}